--- a/src/components/Bubble/styles.css
+++ b/src/components/Bubble/styles.css
@@ -2,7 +2,7 @@
   cursor: pointer;
   background-color: var(--caribbean-green);
   position: absolute;
-  bottom: 0;
+  bottom: 25px;
   right: 25px;
   height: 60px;
   width: 60px;
