--- a/src/main.css
+++ b/src/main.css
@@ -18,8 +18,10 @@
   --solitude: #F9FBFC;
   --porcelain: #ECF0F1;
   --whisper: #E5E8EB;
+  --mischka: #DDDFE4;
   --link-water: #D0D5DA;
   --midnight-express: #18182E;
+  --gunsmoke: #818383;
   --victoria: #515183;
   --shadow: #0000002b;
 }
