--- a/src/components/Teaser/styles.css
+++ b/src/components/Teaser/styles.css
@@ -1,4 +1,5 @@
 .Teaser {
+  position: relative;
   background-color: var(--solitude);
   min-height: 100vh;
 }
@@ -18,6 +19,30 @@
   font-size: 1em;
   font-weight: 100;
   margin-top: 50px;
+}
+
+/* content */
+.ContentWrapper {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  width: 100%;
+  padding: 3.75rem;
+}
+
+.ContentWrapper>h3 {
+  color: var(--deep-cove);
+  font-family: 'Rubik', sans-serif;
+  font-size: 2.15em;
+  font-weight: 500;
+}
+
+.ContentWrapper>h2 {
+  color: var(--deep-cove);
+  font-family: 'Rubik', sans-serif;
+  font-size: 1.15em;
+  font-weight: 100;
+  margin-top: 25px;
 }
 
 /* carousel - shadows */
@@ -51,6 +76,7 @@
   overflow: hidden;
   position: relative;
   width: 90%;
+  user-select: none;
 }
 
 .Teaser>.Wrapper>.Carousel>.Track {
