--- a/src/components/Home/styles.css
+++ b/src/components/Home/styles.css
@@ -73,9 +73,9 @@
 
 .h4 {
   color: var(--white);
-  font-family: 'Rubik', sans-serif;
-  font-size: 1.22em;
-  font-weight: 100;
+  font: 400 1.15em 'Source Sans Pro', sans-serif;
+  font-size: 1.4em;
+  font-weight: 400;
   line-height: 2rem;
 }
 
