--- a/src/main.css
+++ b/src/main.css
@@ -90,6 +90,7 @@ body {
   font: 500 1em 'Rubik', sans-serif;
   transition: .3s;
   user-select: none;
+  align-self: flex-start;
 }
 
 .Button:hover {
